--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AW 💌</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet"
+    href="style.css" />
 </head>
 <body>
   <div class="cover-screen" id="coverScreen">
@@ -27,11 +28,7 @@
     <source src="iris-violino.mp3" type="audio/mpeg" />
   </audio>
 
-  <script>
-    function revealSite() {
-      document.getElementById('coverScreen').style.display = 'none';
-      document.getElementById('siteContent').style.display = 'block';
-    }
-  </script>
+  <script src="script.js" defer></script>
+    
 </body>
 </html>
