--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   </div>
 
   <div class="conteudo oculto" id="conteudo">
-    <audio autoplay loop>
-      <source src="iris-violino.mp3" type="audio/mpeg" />
-    </audio>
+    <audio id="musica" loop>
+  <source src="iris-violino.mp3" />
+</audio>
 
     <main>
       <h1>Para o Amor da Minha Vida</h1>
