--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <div class="conteudo oculto" id="conteudo">
     <audio id="musica" loop>
-  <source src="iris-violino.mp3" />
+  <source src="iris-violino.mp3" type="audio/mpeg" />
 </audio>
 
     <main>
