--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <div class="intro">
     <div class="selo-container">
-      <img src="selo.png" alt="Selo de cera" id="selo"/>
-      <p class="iniciais">AW</p>
-    </div>
+  <img id="selo" src="selo.png" alt="Selo de cera">
+  <div class="iniciais">AW</div>
+</div>
   </div>
 
   <div class="conteudo oculto" id="conteudo">
