--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 <body>
   <div class="intro">
     <div class="selo-container">
-  <img id="selo" src="selo.png" alt="Selo de cera">
-  <div class="iniciais">AW</div>
-</div>
+      <img id="selo" src="selo.png" alt="Selo de cera">
+    </div>
+    <div class="iniciais">AW</div>
   </div>
 
   <div class="conteudo oculto" id="conteudo">
-    <audio id="musica" src="iris-violino.mp3">
-    </audio>
+    <audio id="musica" src="iris-violino.mp3"></audio>
 
     <main>
       <h1>Para o Amor da Minha Vida</h1>
