--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   <link rel="preload" as="audio" href="iris-violino.mp3" />
 </head>
 <body>
-  <div class="intro">
-  <div class="selo-container">
-    <img id="selo" src="selo.png" alt="Selo de cera">
-    <div class="iniciais">AW</div>
+  <div class="intro" id="intro">
+  <div class="faixa">
+    <div class="iniciais" id="gatilho">AW</div>
   </div>
 </div>
   
