--- a/memorias.html
+++ b/memorias.html
@@ -90,11 +90,53 @@
   <audio id="musicaGaleria" src="kiss.mp3" loop></audio>
 
   <div class="galeria">
-    <img src="img1.jpg" alt="Memória 1">
-    <img src="img2.jpg" alt="Memória 2">
-    <img src="img3.jpg" alt="Memória 3">
-    <img src="img4.jpg" alt="Memória 4">
-    <!-- Adicione quantas quiser -->
+    <img src="foto/foto1.png" alt="Memória 1">
+    <img src="foto/foto2.png" alt="Memória 2">
+    <img src="foto/foto3.png" alt="Memória 3">
+    <img src="foto/foto4.png" alt="Memória 4">
+    <img src="foto/foto5.png" alt="Memória 5">
+    <img src="foto/foto6.png" alt="Memória 6">
+    <img src="foto/foto7.png" alt="Memória 7">
+    <img src="foto/foto8.png" alt="Memória 8">
+    <img src="foto/foto9.png" alt="Memória 9">
+    <img src="foto2/foto10.png" alt="Memória 10">
+    <img src="foto2/foto11.png" alt="Memória 11">
+    <img src="foto2/foto12.png" alt="Memória 12">
+    <img src="foto2/foto13.png" alt="Memória 13">
+    <img src="foto2/foto14.png" alt="Memória 14">
+    <img src="foto2/foto15.png" alt="Memória 15">
+    <img src="foto2/foto16.png" alt="Memória 16">
+    <img src="foto2/foto17.png" alt="Memória 17">
+    <img src="foto2/foto18.png" alt="Memória 18">
+    <img src="foto2/foto19.png" alt="Memória 19">
+    <img src="foto2/foto20.png" alt="Memória 20">
+    <img src="foto2/foto21.png" alt="Memória 21">
+    <img src="foto2/foto22.png" alt="Memória 22">
+    <img src="foto3/foto23.png" alt="Memória 23">
+    <img src="foto3/foto24.png" alt="Memória 24">
+    <img src="foto3/foto25.png" alt="Memória 25">
+    <img src="foto3/foto26.png" alt="Memória 26">
+    <img src="foto3/foto27.png" alt="Memória 27">
+    <img src="foto3/foto28.png" alt="Memória 28">
+    <img src="foto3/foto29.png" alt="Memória 29">
+    <img src="foto3/foto30.png" alt="Memória 30">
+    <img src="foto3/foto31.png" alt="Memória 31">
+    <img src="foto3/foto32.png" alt="Memória 32">
+    <img src="foto3/foto33.png" alt="Memória 33">
+    <img src="foto3/foto34.png" alt="Memória 34">
+    <img src="foto4/foto35.png" alt="Memória 35">
+    <img src="foto4/foto36.png" alt="Memória 36">
+    <img src="foto4/foto37.png" alt="Memória 37">
+    <img src="foto4/foto38.png" alt="Memória 38">
+    <img src="foto4/foto39.png" alt="Memória 39">
+    <img src="foto4/foto40.png" alt="Memória 40">
+    <img src="foto4/foto41.png" alt="Memória 41">
+    <img src="foto4/foto42.png" alt="Memória 42">
+    <img src="foto4/foto43.png" alt="Memória 43">
+    <img src="foto4/foto44.png" alt="Memória 44">
+    <img src="foto4/foto45.png" alt="Memória 45">
+    <img src="foto4/foto46.png" alt="Memória 46">
+    <img src="foto4/foto47.png" alt="Memória 47">
   </div>
 
   <div class="imagem-ampliada" id="ampliada">
