--- a/memorias.html
+++ b/memorias.html
@@ -6,84 +6,86 @@
   <title>Nossas Memórias</title>
   <link rel="stylesheet" href="style.css">
   <style>
-    body {
-      background: black;
-      margin: 0;
-      font-family: 'Roboto', sans-serif;
-      color: white;
-      overflow-x: hidden;
-    }
+  body {
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    overflow-x: hidden;
+    background: url('seu-fundo.jpg') no-repeat center center fixed;
+    background-size: cover;
+  }
 
-    .galeria {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1rem;
-      padding: 2rem;
-      z-index: 1;
-    }
+  .galeria {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1rem;
+    padding: 2rem;
+    z-index: 1;
+  }
 
-    .galeria img {
-      width: 100%;
-      border-radius: 12px;
-      cursor: pointer;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
+  .galeria img {
+    width: 100%;
+    border-radius: 12px;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
 
-    .galeria img:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
-    }
+  .galeria img:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
+  }
 
-    .imagem-ampliada {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.95);
-      justify-content: center;
-      align-items: center;
-      z-index: 999;
-    }
+  .imagem-ampliada {
+    display: none;
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.95);
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+  }
 
-    .imagem-ampliada img {
-      max-width: 90%;
-      max-height: 90%;
-      border-radius: 16px;
-    }
+  .imagem-ampliada img {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 16px;
+  }
 
-    .fechar {
-      position: absolute;
-      top: 20px;
-      right: 30px;
-      font-size: 2rem;
-      color: white;
-      cursor: pointer;
-      background: none;
-      border: none;
-    }
+  .fechar {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-size: 2rem;
+    color: white;
+    cursor: pointer;
+    background: none;
+    border: none;
+  }
 
-    .botao-voltar {
-      position: fixed;
-      bottom: 20px;
-      left: 20px;
-      background-color: #7e57c2;
-      color: white;
-      padding: 0.8rem 1.2rem;
-      border: none;
-      border-radius: 12px;
-      text-decoration: none;
-      font-weight: bold;
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-      transition: background 0.3s ease;
-    }
+  .botao-voltar {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    background-color: #7e57c2;
+    color: white;
+    padding: 0.8rem 1.2rem;
+    border: none;
+    border-radius: 12px;
+    text-decoration: none;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    transition: background 0.3s ease;
+    z-index: 1000;
+  }
 
-    .botao-voltar:hover {
-      background-color: #9575cd;
-    }
-  </style>
+  .botao-voltar:hover {
+    background-color: #9575cd;
+  }
+</style>
 </head>
 <body class="fundo-espelho">
 
@@ -169,16 +171,21 @@
   <script>
   document.addEventListener('DOMContentLoaded', () => {
     const musicaGaleria = document.getElementById('musicaGaleria');
+    if (!musicaGaleria) return;
 
-    if (musicaGaleria) {
-      // Toca ao clicar em qualquer parte da tela
-      const tocarMusica = () => {
-        musicaGaleria.play().catch(() => {});
-        document.removeEventListener('click', tocarMusica);
-      };
+    // Tenta tocar logo que carrega
+    const tentarTocar = () => {
+      musicaGaleria.play().catch(() => {
+        // Se não tocar, espera o primeiro clique
+        const ativarMusica = () => {
+          musicaGaleria.play();
+          document.removeEventListener('click', ativarMusica);
+        };
+        document.addEventListener('click', ativarMusica);
+      });
+    };
 
-      document.addEventListener('click', tocarMusica);
-    }
+    tentarTocar();
   });
 </script>
 
