--- a/memorias.html
+++ b/memorias.html
@@ -11,7 +11,7 @@
     font-family: 'Roboto', sans-serif;
     color: white;
     overflow-x: hidden;
-    background: url('seu-fundo.jpg') no-repeat center center fixed;
+    background: black;
     background-size: cover;
   }
 
