--- a/memorias.html
+++ b/memorias.html
@@ -11,6 +11,7 @@
     font-family: 'Roboto', sans-serif;
     color: white;
     overflow-x: hidden;
+    overflow-y: auto;
     background: black;
     background-size: cover;
   }
@@ -101,8 +102,8 @@
     <img src="foto/foto7.png" alt="Memória 7">
     <img src="foto/foto8.png" alt="Memória 8">
     <img src="foto/foto9.png" alt="Memória 9">
-    <img src="foto2/foto10.png" alt="Memória 10">
-    <img src="foto2/foto11.png" alt="Memória 11">
+    <img src="foto/foto10.png" alt="Memória 10">
+    <img src="foto/foto11.png" alt="Memória 11">
     <img src="foto2/foto12.png" alt="Memória 12">
     <img src="foto2/foto13.png" alt="Memória 13">
     <img src="foto2/foto14.png" alt="Memória 14">
