--- a/mensagem.html
+++ b/mensagem.html
@@ -24,9 +24,10 @@
     }
 
     h1 {
-      font-size: 2.5rem;
+      font-family: 'Great Vibes', cursive;
+      font-size: 3rem;
+      color: #d0aaff;
       margin-bottom: 3rem;
-      font-family: 'Dancing Script', cursive;
     }
 
     .gatilho {
