--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Para o Amor da Minha Vida</title>
+  <title>Site AW</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="preload" as="audio" href="iris-violino.mp3" />
 </head>
@@ -18,12 +18,12 @@
     <audio id="musica" src="iris-violino.mp3"></audio>
 
     <main>
-      <h1>Para o Amor da Minha Vida</h1>
-      <p>Você é minha inspiração todos os dias. Este cantinho é só nosso, feito com todo amor do mundo.</p>
+      <h1>Per l'amore della mia vita</h1>
+      <p>É meu amor, eu disse que estava fazendo seu presente, este site é só nosso, é o nosso cantinho, funciona 24h por dia e 7 dias por semana, para você sempre poder entrar e lembrar: EU TE AMO! ❤</p>
 
       <div class="botoes">
         <a href="memorias.html" class="botao">Nossas Memórias</a>
-        <a href="mensagem.html" class="botao">Minha Mensagem</a>
+        <a href="mensagem.html" class="botao">Cartinha</a>
       </div>
     </main>
 
