--- a/mensagem.html
+++ b/mensagem.html
@@ -30,8 +30,9 @@
       z-index: 1000;
       padding: 1.5rem 1rem;
       text-align: center;
-      font-family: 'Dancing Script', cursive;
-      font-size: 2.5rem;
+      font-family: 'Great Vibes', cursive;
+      color: #d0aaff;
+      font-size: 5.5rem;
       background: transparent;
       transition: all 0.3s ease;
     }
