--- a/mensagem.html
+++ b/mensagem.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Mensagem Especial</title>
+  <title>Mensagem do amor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="style.css" rel="stylesheet">
   <style>
@@ -123,7 +123,7 @@
   <audio id="musicaMensagem" src="mensagem.mp3" preload="auto"></audio>
 
   <div class="espaco-titulo"></div>
-  <div class="topo-fixo" id="cabecalho">Nossas Palavras</div>
+  <div class="topo-fixo" id="cabecalho">Meu amor...</div>
 
   <div class="conteudo">
     <div class="gatilho" id="gatilhoMensagem">O que falar de você...</div>
