--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
     <main>
       <h1>Per l'amore della mia vita</h1>
-      <p>É meu amor, eu disse que estava fazendo seu presente, este site é só nosso, é o nosso cantinho, funciona 24h por dia e 7 dias por semana, para você sempre poder entrar e lembrar: EU TE AMO! ❤</p>
+      <p>É meu amor, eu disse que estava fazendo seu presente, este site é só nosso, é o nosso cantinho,
+        funciona 24h por dia e 7 dias por semana, para você sempre poder entrar e lembrar:
+        EU TE AMO! ❤</p>
 
       <div class="botoes">
         <a href="memorias.html" class="botao">Nossas Memórias</a>
