--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
     <footer>
       Feito com amor, AW 💌
     </footer>
+
+    <div class="rel﻿ogio-container">
+  <div id="contador-amor"></div>
+  <p class="legenda">...desde o nosso sim ❤</p>
+</div>
+    
   </div>
 
   <script src="script.js" defer></script>
