--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
       </div>
     </main>
 
+    <div class="relogio-amor">
+  <div id="tempo-juntos"></div>
+  <p>...desde o nosso sim ❤</p>
+</div>
+
     <footer>
       Feito com amor, AW 💌
     </footer>
-
-    <div class="rel﻿ogio-container">
-  <div id="contador-amor"></div>
-  <p class="legenda">...desde o nosso sim ❤</p>
-</div>
     
   </div>
 
