--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
     <main>
       <h1>Per l'amore della mia vita</h1>
-      <p>É meu amor, eu disse que estava fazendo seu presente, este site é só nosso, é o nosso cantinho,
-        funciona 24h por dia e 7 dias por semana, para você sempre poder entrar e lembrar:
-        EU TE AMO! ❤</p>
+      <p>É meu amor, eu disse que estava fazendo seu presente, este site é só nosso, é o nosso cantinho,</p>
+      <p>funciona 24h por dia e 7 dias por semana, para você sempre poder entrar e lembrar:</p>
+      <p>EU TE AMO! ❤</p>
 
       <div class="botoes">
         <a href="memorias.html" class="botao">Nossas Memórias</a>
@@ -47,7 +47,7 @@
   .relogio-amor p {
     margin-top: 0.5rem;
     font-size: 1.2rem;
-    color: #f8bbd0;
+    color: #d0aaff;
   }
 </style>
 
