--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 
     <main>
       <h1>Per l'amore della mia vita</h1>
-      <p>É meu amor, eu disse que estava fazendo seu presente, este site é só nosso, é o nosso cantinho,
-      funciona 24h por dia e 7 dias por semana, para você sempre poder entrar e lembrar:
-      EU TE AMO! ❤</p>
+      
+      <div class="mensagem">
+  <p>É meu amor, eu disse que estava fazendo seu presente, este site é só nosso, é o nosso cantinho,</p>
+  <p>funciona 24h por dia e 7 dias por semana, para você sempre poder entrar e lembrar:</p>
+  <p>EU TE AMO! ❤</p>
+</div>
 
       <div class="botoes">
         <a href="memorias.html" class="botao">Nossas Memórias</a>
