--- a/mensagem.html
+++ b/mensagem.html
@@ -139,14 +139,17 @@
     const cabecalho = document.getElementById('cabecalho');
 
     const texto = `
-É difícil colocar em palavras tudo o que você significa pra mim...
+Falar que você é linda seria rebaixar sua beleza, falar que você é única seria muito óbvio, falar que você é minha princesa é meu sonho diário, então prefiro falar o óbvio, o verdadeiro, que você é minha princesa, minha companheira, minha amiga, minha melhor amiga, minha namorada, minha noiva, minha esposa, minha mulher, a futura mãe dos meus filhos, você é tudo isso e mais um pouco, você é você!
 
-Cada risada, cada abraço, cada momento ao seu lado constrói uma história que eu nunca canso de viver.
+Nós estamos juntos e passamos por tantas coisas que como você já sabe, é até difícil pensar que um dia não estivemos grudados, seu cheiro e presença recompensam tudo, seja como for.
 
-Você é meu lugar seguro, meu sorriso nos dias difíceis, e minha alegria diária.
+Prometo estar contigo na alegria e na tristeza, na saúde e na doença, na riqueza e na pobreza, amando-te, respeitando-te e sendo-te fiel em todos os dias de minha vida, até que o som nasça mais um dia e eu repita isso tudo mais uma vez, pois cada dia ao teu lado é novo mas ao mesmo tempo com o mesmo amor e cor, com a mesma ternura e paixão, com o calor e o amor, você é única sendo a mesma, estarei contigo em tudo aquilo que precisar e naquilo que não precisa também, nem só de necessidade nós vivemos, mas de escolha, eu escolho te amar e te digo, é a melhor escolha que eu posso e quero fazer para todo o sempre.
 
-Essa mensagem é só um pedacinho do que meu coração sente — o resto... eu continuo te mostrando todos os dias. ❤️
-    `;
+Eu te amo absurdamente, inegavelmente, inigualavelmente, inefavelmente, unicamente, de todo o meu coração, ida e volta não só até a lua mas até os astros mais longivos, eu só te digo que quando tudo estiver estranho, eu ainda quero que você me conheça mais e esteja ainda mais comigo, somos feitos um para o outro e para amar, um ao outro e amando a si no outro, obrigado por tudo que já vivemos e por tudo que ainda está por chegar.
+
+Eu te amo Angélica Biffe Di Renzo ❤️
+
+De seu amigo/companheiro/namorado/noivo/esposo Werickson Alexandre Carvalho Fernandes.`;
 
     let index = 0;
     let digitando = false;
