--- a/mensagem.html
+++ b/mensagem.html
@@ -45,12 +45,27 @@
     }
 
     .conteudo {
-      padding: 4rem 2rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
+  padding: 4rem 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  max-height: 100vh;
+  overflow-y: auto;
+  scroll-padding-top: 140px;
+}
+
+.mensagem-digitada {
+  max-width: 800px;
+  font-size: 1.3rem;
+  line-height: 1.8;
+  white-space: pre-wrap;
+  text-align: left;
+  overflow-wrap: break-word;
+  text-align: left;
+  margin-top: 2rem;
+  align-self: flex-start;
+}
 
     h1 {
       font-family: 'Great Vibes', cursive;
@@ -69,16 +84,6 @@
 
     .gatilho:hover {
       color: white;
-    }
-
-    .mensagem-digitada {
-      max-width: 800px;
-      margin-top: 3rem;
-      font-size: 1.3rem;
-      line-height: 1.8;
-      white-space: pre-wrap;
-      text-align: left;
-      overflow-wrap: break-word;
     }
 
     .botao-voltar {
