--- a/mensagem.html
+++ b/mensagem.html
@@ -50,9 +50,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  max-height: 100vh;
-  overflow-y: auto;
-  scroll-padding-top: 140px;
+  position: relative;
 }
 
 .mensagem-digitada {
@@ -65,6 +63,7 @@
   text-align: left;
   margin-top: 2rem;
   align-self: flex-start;
+  position: relative;
 }
 
     h1 {
