--- a/mensagem.html
+++ b/mensagem.html
@@ -58,12 +58,17 @@
   font-size: 1.3rem;
   line-height: 1.8;
   white-space: pre-wrap;
-  text-align: left;
   overflow-wrap: break-word;
   text-align: left;
-  margin-top: 2rem;
-  align-self: flex-start;
-  position: relative;
+  margin-top: 3rem;
+
+  height: auto;
+  max-height: 70vh;
+  overflow-y: auto;
+
+  padding-right: 0.5rem;
+  scrollbar-width: thin;
+  scrollbar-color: #888 transparent;
 }
 
     h1 {
