--- a/mensagem.html
+++ b/mensagem.html
@@ -60,12 +60,12 @@
     }
 
     .gatilho {
-      font-size: 1.8rem;
-      color: #cccccc;
-      cursor: pointer;
-      transition: color 0.3s;
-      margin-top: 2rem;
-    }
+  font-size: 1.8rem;
+  color: #cccccc;
+  cursor: pointer;
+  transition: all 0.6s ease;
+  margin-top: -30rem;
+}
 
     .gatilho:hover {
       color: white;
