--- a/mensagem.html
+++ b/mensagem.html
@@ -68,7 +68,7 @@
     }
 
     .gatilho.aberto {
-      margin-top: 30rem; /* desce depois do clique */
+      margin-top: 140rem; /* desce depois do clique */
     }
 
     .gatilho:hover {
@@ -119,6 +119,9 @@
         font-size: 0.9rem;
         padding: 0.6rem 1rem;
       }
+      .gatilho.aberto {
+      margin-top: 65rem; /* desce depois do clique */
+      }
     }
     
   </style>
@@ -154,7 +157,9 @@ Eu te amo absurdamente, inegavelmente, inigualavelmente, inefavelmente, unicamen
 
 Eu te amo Angélica Biffe Di Renzo ❤️
 
-De seu amigo/companheiro/namorado/noivo/esposo Werickson Alexandre Carvalho Fernandes.`;
+De seu amigo/companheiro/namorado/noivo/esposo...
+
+Werickson Alexandre Carvalho Fernandes.`;
 
     let index = 0;
     let digitando = false;
