--- a/mensagem.html
+++ b/mensagem.html
@@ -157,9 +157,7 @@ Eu te amo absurdamente, inegavelmente, inigualavelmente, inefavelmente, unicamen
 
 Eu te amo Angélica Biffe Di Renzo ❤️
 
-De seu amigo/companheiro/namorado/noivo/esposo...
-
-Werickson Alexandre Carvalho Fernandes.`;
+De seu amigo/companheiro/namorado/noivo/esposo...`;
 
     let index = 0;
     let digitando = false;
@@ -190,6 +188,10 @@ Werickson Alexandre Carvalho Fernandes.`;
       }
     });
   </script>
+
+  <footer>
+      Werickson Alexandre Carvalho Fernandes
+    </footer>
 
 </body>
 </html>
