--- a/mensagem.html
+++ b/mensagem.html
@@ -122,6 +122,8 @@
       .gatilho.aberto {
       margin-top: 65rem; /* desce depois do clique */
       }
+      .mensagem-digitada {
+      font-size: 1rem;
     }
     
   </style>
