--- a/mensagem.html
+++ b/mensagem.html
@@ -20,6 +20,10 @@
       overflow-y: auto;
     }
 
+    footer {
+      text-
+    }
+
     .espaco-titulo {
       height: 140px; /* Espaço reservado para o título flutuante */
     }
@@ -120,7 +124,7 @@
         padding: 0.6rem 1rem;
       }
       .gatilho.aberto {
-      margin-top: 65rem; /* desce depois do clique */
+      margin-top: 40rem; /* desce depois do clique */
       }
       .mensagem-digitada {
       font-size: 1rem;
