--- a/mensagem.html
+++ b/mensagem.html
@@ -82,6 +82,7 @@
     .mensagem-digitada {
       max-width: 800px;
       margin-top: 3rem;
+      padding-bottom: 6rem;
       font-size: 1.3rem;
       line-height: 1.8;
       white-space: pre-wrap;
@@ -195,9 +196,9 @@ De seu amigo/companheiro/namorado/noivo/esposo...`;
     });
   </script>
 
-  <footer>
-      Werickson Alexandre Carvalho Fernandes
-    </footer>
+  <footer class="footer-mensagem">
+  Werickson Alexandre Carvalho Fernandes
+  </footer>
 
 </body>
 </html>
