--- a/mensagem.html
+++ b/mensagem.html
@@ -123,6 +123,7 @@
       .botao-voltar {
         font-size: 0.9rem;
         padding: 0.6rem 1rem;
+        margin-bottom: 2.2rem;
       }
       .gatilho.aberto {
       margin-top: 40rem; /* desce depois do clique */
