--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="preload" as="audio" href="iris-violino.mp3" />
 </head>
-<body class="fundo-preto bloqueado-scroll">
+<body>
   <div class="intro" id="intro">
   <div class="faixa">
     <div class="iniciais" id="gatilho">AW</div>
